# fluid.sh

./: .env  .env.example  .gitignore  .golangci.yaml  .goreleaser.yaml  AGENTS.md  CLAUDE.md  LICENSE  README.md  docker-compose.yml  lefthook.yaml  mprocs.yaml  public-key.asc
.github/: pull_request_template.md  settings.yaml
agent/: main.py  tools.py
ansible-runner/: Dockerfile  pyproject.toml
api/: go.mod  go.sum
docs/: agent-based-cleanup.md  agent-connection-flow.md  agent-run-command-requiring-password.md  cloud-init-cloning-fix.md  future-plan.md  lima-9p-mount-chmod.md  lima-apparmor-permission-denied.md  lima-architecture-mismatch.md  lima-mount-missing.md  lima-ssh-port-mismatch.md  macos-libvirt-setup.md  plan-virtualbox.md  plan.md  publishing-plan.md  request-timeouts.md  tagging.md  versioning.md
examples/terminal-agent/: .gitignore  PRD.md  __init__.py  agent.py  ansible_tools.py  config.py  llm.py  main.py  mcp_client.py  mcp_manager.py  planning_tools.py  pyproject.toml  sandbox_tools.py  session_manager.py  telemetry.py  tools.py  tui.py
examples/terminal-agent/tests/: __init__.py  test_agent.py  test_ansible_tools.py  test_auto_tracking.py  test_completion.py  test_history.py  test_llm.py  test_mcp_client.py  test_mcp_integration.py  test_planning_tools.py  test_review.py  test_sandbox_tools.py  test_session.py  test_tools.py  test_tui.py
fluid/: .gitignore  AGENTS.md  Makefile  go.mod  go.sum
fluid-remote/: AGENTS.md  Dockerfile  Makefile  config.example.yaml  go.mod
frontend/: Dockerfile  orval.config.ts  package.json  vite.config.ts
(+1527 files in other folders)
